--- a/requirements.txt
+++ b/requirements.txt
@@ -6,29 +6,49 @@ certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+dnspython==2.7.0
+email_validator==2.2.0
 fastapi==0.115.6
+fastapi-cli==0.0.6
 Flask==3.1.0
+h11==0.14.0
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
 MouseInfo==0.1.3
 pillow==11.0.0
 PyAutoGUI==0.9.54
 pydantic==2.10.3
 pydantic_core==2.27.1
 PyGetWindow==0.0.9
+Pygments==2.18.0
 PyMsgBox==1.0.9
 pyperclip==1.9.0
 PyRect==0.2.0
 PyScreeze==1.0.1
+python-dotenv==1.0.1
+python-multipart==0.0.19
 pytweening==1.2.0
 pywhatkit==5.4
+PyYAML==6.0.2
 requests==2.32.3
+rich==13.9.4
+rich-toolkit==0.12.0
+shellingham==1.5.4
 sniffio==1.3.1
 soupsieve==2.6
 starlette==0.41.3
+typer==0.15.1
 typing_extensions==4.12.2
 urllib3==2.2.3
+uvicorn==0.32.1
+watchfiles==1.0.3
+websockets==14.1
 Werkzeug==3.1.3
 wikipedia==1.4.0
