--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ PyYAML==6.0.2
 requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.12.0
+schedule==1.2.2
 shellingham==1.5.4
 sniffio==1.3.1
 soupsieve==2.6
