--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,12 @@ httpx==0.28.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
+joblib==1.4.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 MouseInfo==0.1.3
+numpy==2.2.1
 pillow==11.0.0
 PyAutoGUI==0.9.54
 pydantic==2.10.3
@@ -41,10 +43,13 @@ requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.12.0
 schedule==1.2.2
+scikit-learn==1.6.0
+scipy==1.15.0
 shellingham==1.5.4
 sniffio==1.3.1
 soupsieve==2.6
 starlette==0.41.3
+threadpoolctl==3.5.0
 typer==0.15.1
 typing_extensions==4.12.2
 urllib3==2.2.3
