--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 MouseInfo==0.1.3
 numpy==2.2.1
+pandas==2.2.3
 pillow==11.0.0
 PyAutoGUI==0.9.54
 pydantic==2.10.3
@@ -34,9 +35,11 @@ PyMsgBox==1.0.9
 pyperclip==1.9.0
 PyRect==0.2.0
 PyScreeze==1.0.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.19
 pytweening==1.2.0
+pytz==2024.2
 pywhatkit==5.4
 PyYAML==6.0.2
 requests==2.32.3
@@ -46,12 +49,14 @@ schedule==1.2.2
 scikit-learn==1.6.0
 scipy==1.15.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
 starlette==0.41.3
 threadpoolctl==3.5.0
 typer==0.15.1
 typing_extensions==4.12.2
+tzdata==2024.2
 urllib3==2.2.3
 uvicorn==0.32.1
 watchfiles==1.0.3
